HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/DynamicMissingMethod/Expected.uv
//! Expected diagnostic metadata for the DynamicMissingMethod rejected-source specimen.

expectedDiagnostic("E-SEM-2536", "rule.14.LookupClassMethod-NotFound")
